--- a/index.html
+++ b/index.html
@@ -209,6 +209,144 @@
         </div>
       </div>
     </section>
+    <section class="hero">
+      <div class="hero-inner">
+        <h1 class="hero-title hero-animation">Simplify</h1>
+        <p class="hero-perex hero-animation">Imagine a life with less clutter and more clarity. <br>Minimalism helps you focus on the important things and thrive in all aspects of life. <br>Let's simplify, focus, and thrive side by side! </p>
+      </div>
+    </section>
+    <div data-w-id="cbaab2d3-dfbd-710d-9d36-d4db9f682465" style="opacity:0" class="hero-post w-dyn-list">
+      <div role="list" class="hero-post-list w-dyn-items">
+        <div role="listitem" class="hero-post-item w-dyn-item">
+          <a title="Traveling Light: Minimalist Packing Tips for Your Next Adventure" href="traveling-light-minimalist-packing-tips-for-your-next-adventure.html" class="hero-post-link is-image w-inline-block">
+            <div data-w-id="cbaab2d3-dfbd-710d-9d36-d4db9f682469" class="hero-post-img-wrap">
+              <img src="images/664f8a317157bd6f699fbafd-664f8a317157bd6f699fbb14_photo15.jpeg" loading="lazy" style="opacity:0" data-w-id="5b769027-fc87-cd55-2692-c2710e9bc8ec" alt="Traveling Light: Minimalist Packing Tips for Your Next Adventure" sizes="(max-width: 479px) 95vw, (max-width: 991px) 85vw, 42vw" srcset="https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb14_photo15-p-500.jpeg 500w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb14_photo15-p-800.jpeg 800w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb14_photo15-p-1080.jpeg 1080w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb14_photo15.jpeg 1600w" class="hero-post-image">
+            </div>
+          </a>
+          <div class="hero-post-content">
+            <a title="Traveling Light: Minimalist Packing Tips for Your Next Adventure" href="traveling-light-minimalist-packing-tips-for-your-next-adventure.html" class="hero-post-link w-inline-block">
+              <h1 data-w-id="cbaab2d3-dfbd-710d-9d36-d4db9f682470" style="opacity:0" class="hero-post-title">Traveling Light: Minimalist Packing Tips for Your Next Adventure</h1>
+            </a>
+            <div data-w-id="cbaab2d3-dfbd-710d-9d36-d4db9f682471" style="opacity:0" class="hero-post-perex">Vinyl pickled prism anim ipsum enamel pin truffaut fingerstache sus biodiesel forage asymmetrical nostrud. Banh mi unicorn kale chips 3 wolf moon typewriter Brooklyn vice tattooed poke raclette ex pabst.</div>
+            <a title="Traveling Light: Minimalist Packing Tips for Your Next Adventure" data-w-id="4908397f-2f8d-7069-67d9-5aff72343631" style="opacity:0" href="traveling-light-minimalist-packing-tips-for-your-next-adventure.html" class="hero-button button w-button">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div data-w-id="e0b9e476-5779-ba2b-96c7-cdaae90400d9" class="deco-divider"></div>
+    <section class="lastest-posts">
+      <div class="latest-posts-wrapper w-dyn-list">
+        <div role="list" class="latest-posts-grid w-dyn-items">
+          <div post-style="tall" role="listitem" class="latest-post w-dyn-item">
+            <a title="Minimalist Parenting: Raising Kids in a Simplified Environment" href="minimalist-parenting-raising-kids-in-a-simplified-environment.html" class="latest-post-link w-inline-block">
+              <div data-w-id="8d1cbd97-24f0-a19c-d90b-56ded9b40ff6" style="opacity:0" class="latest-post-image-wrap">
+                <img src="images/664f8a317157bd6f699fbafd-664f8a317157bd6f699fbb13_photo14.jpeg" loading="lazy" alt="" sizes="(max-width: 479px) 84vw, (max-width: 767px) 80vw, 600px" srcset="https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb13_photo14-p-500.jpeg 500w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb13_photo14-p-800.jpeg 800w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb13_photo14-p-1080.jpeg 1080w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb13_photo14.jpeg 1200w" class="latest-post-image">
+              </div>
+            </a>
+            <div class="latest-post-content">
+              <a title="Minimalist Parenting: Raising Kids in a Simplified Environment" href="minimalist-parenting-raising-kids-in-a-simplified-environment.html" class="latest-post-link w-inline-block">
+                <h2 data-w-id="1be00ce7-be0c-c09c-9587-4d64518244bc" style="opacity:0" class="latest-post-item-title">Minimalist Parenting: Raising Kids in a Simplified Environment</h2>
+              </a>
+              <div data-w-id="ecdacb4f-c60b-f7c1-4e05-09a312ded674" style="opacity:0" class="latest-post-item-perex">Fugiat id sustainable pork belly 8-bit craft beer blog marxism fashion axe. Venmo gluten-free eu selvage, irure lyft kickstarter grailed veniam XOXO flannel authentic.</div>
+              <a title="Minimalist Parenting: Raising Kids in a Simplified Environment" data-w-id="3e72ecd8-0532-fe9f-88d4-e87079160dba" style="opacity:0" href="minimalist-parenting-raising-kids-in-a-simplified-environment.html" class="latest-post-more">Read More</a>
+            </div>
+          </div>
+          <div post-style="tall" role="listitem" class="latest-post w-dyn-item">
+            <a title="Minimalist Home Design: Creating Serenity in Your Space" href="minimalist-home-design-creating-serenity-in-your-space.html" class="latest-post-link w-inline-block">
+              <div data-w-id="8d1cbd97-24f0-a19c-d90b-56ded9b40ff6" style="opacity:0" class="latest-post-image-wrap">
+                <img src="images/664f8a317157bd6f699fbafd-664f8a317157bd6f699fbb12_photo9.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 84vw, (max-width: 767px) 80vw, 600px" srcset="https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb12_photo9-p-500.jpg 500w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb12_photo9-p-800.jpg 800w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb12_photo9-p-1080.jpg 1080w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb12_photo9.jpg 1187w" class="latest-post-image">
+              </div>
+            </a>
+            <div class="latest-post-content">
+              <a title="Minimalist Home Design: Creating Serenity in Your Space" href="minimalist-home-design-creating-serenity-in-your-space.html" class="latest-post-link w-inline-block">
+                <h2 data-w-id="1be00ce7-be0c-c09c-9587-4d64518244bc" style="opacity:0" class="latest-post-item-title">Minimalist Home Design: Creating Serenity in Your Space</h2>
+              </a>
+              <div data-w-id="ecdacb4f-c60b-f7c1-4e05-09a312ded674" style="opacity:0" class="latest-post-item-perex">Fugiat intelligentsia kinfolk officia. Dolore crucifix austin health goth gastropub. Chambray photo booth reprehenderit disrupt. Meditation butcher dolor, chillwave in celiac incididunt pinterest gatekeep venmo humblebrag thundercats polaroid.</div>
+              <a title="Minimalist Home Design: Creating Serenity in Your Space" data-w-id="3e72ecd8-0532-fe9f-88d4-e87079160dba" style="opacity:0" href="minimalist-home-design-creating-serenity-in-your-space.html" class="latest-post-more">Read More</a>
+            </div>
+          </div>
+          <div post-style="wide" role="listitem" class="latest-post w-dyn-item">
+            <a title="Capsule Wardrobe Essentials: Building a Minimalist Closet" href="capsule-wardrobe-essentials-building-a-minimalist-closet.html" class="latest-post-link w-inline-block">
+              <div data-w-id="8d1cbd97-24f0-a19c-d90b-56ded9b40ff6" style="opacity:0" class="latest-post-image-wrap">
+                <img src="images/664f8a317157bd6f699fbafd-664f8a317157bd6f699fbb11_photo8.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 84vw, (max-width: 767px) 80vw, 600px" srcset="https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb11_photo8-p-500.jpg 500w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb11_photo8-p-800.jpg 800w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb11_photo8-p-1080.jpg 1080w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb11_photo8.jpg 1600w" class="latest-post-image">
+              </div>
+            </a>
+            <div class="latest-post-content">
+              <a title="Capsule Wardrobe Essentials: Building a Minimalist Closet" href="capsule-wardrobe-essentials-building-a-minimalist-closet.html" class="latest-post-link w-inline-block">
+                <h2 data-w-id="1be00ce7-be0c-c09c-9587-4d64518244bc" style="opacity:0" class="latest-post-item-title">Capsule Wardrobe Essentials: Building a Minimalist Closet</h2>
+              </a>
+              <div data-w-id="ecdacb4f-c60b-f7c1-4e05-09a312ded674" style="opacity:0" class="latest-post-item-perex">Blog trust fund quinoa typewriter, DIY gorpcore culpa gochujang yes plz. Messenger bag portland air plant keytar ad. Fam magna lorem DSA, selfies same laborum narwhal street art quinoa put a bird on it everyday carry wolf woke blackbird spyplane. Minim banjo meditation nulla enamel pin laborum small batch consequat sed reprehenderit tattooed.</div>
+              <a title="Capsule Wardrobe Essentials: Building a Minimalist Closet" data-w-id="3e72ecd8-0532-fe9f-88d4-e87079160dba" style="opacity:0" href="capsule-wardrobe-essentials-building-a-minimalist-closet.html" class="latest-post-more">Read More</a>
+            </div>
+          </div>
+          <div post-style="tall" role="listitem" class="latest-post w-dyn-item">
+            <a title="Mindful Consumption: Making Conscious Choices in a Consumerist World" href="mindful-consumption-making-conscious-choices-in-a-consumerist-world.html" class="latest-post-link w-inline-block">
+              <div data-w-id="8d1cbd97-24f0-a19c-d90b-56ded9b40ff6" style="opacity:0" class="latest-post-image-wrap">
+                <img src="images/664f8a317157bd6f699fbafd-664f8a317157bd6f699fbb10_photo7.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 84vw, (max-width: 767px) 80vw, 600px" srcset="https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb10_photo7-p-500.jpg 500w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb10_photo7-p-800.jpg 800w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb10_photo7-p-1080.jpg 1080w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb10_photo7.jpg 1116w" class="latest-post-image">
+              </div>
+            </a>
+            <div class="latest-post-content">
+              <a title="Mindful Consumption: Making Conscious Choices in a Consumerist World" href="mindful-consumption-making-conscious-choices-in-a-consumerist-world.html" class="latest-post-link w-inline-block">
+                <h2 data-w-id="1be00ce7-be0c-c09c-9587-4d64518244bc" style="opacity:0" class="latest-post-item-title">Mindful Consumption: Making Conscious Choices in a Consumerist World</h2>
+              </a>
+              <div data-w-id="ecdacb4f-c60b-f7c1-4e05-09a312ded674" style="opacity:0" class="latest-post-item-perex">Authentic reprehenderit salvia, magna ipsum irure tofu echo park franzen. Subway tile quis gluten-free art party. Marxism dolore venmo listicle commodo deserunt bicycle rights man braid actually anim kitsch sriracha shaman deep v.</div>
+              <a title="Mindful Consumption: Making Conscious Choices in a Consumerist World" data-w-id="3e72ecd8-0532-fe9f-88d4-e87079160dba" style="opacity:0" href="mindful-consumption-making-conscious-choices-in-a-consumerist-world.html" class="latest-post-more">Read More</a>
+            </div>
+          </div>
+          <div post-style="wide" role="listitem" class="latest-post w-dyn-item">
+            <a title="Finding Joy in Simplicity: Embracing a Minimalist Lifestyle" href="finding-joy-in-simplicity-embracing-a-minimalist-lifestyle.html" class="latest-post-link w-inline-block">
+              <div data-w-id="8d1cbd97-24f0-a19c-d90b-56ded9b40ff6" style="opacity:0" class="latest-post-image-wrap">
+                <img src="images/664f8a317157bd6f699fbafd-664f8a317157bd6f699fbb0f_photo6.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 84vw, (max-width: 767px) 80vw, 600px" srcset="https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb0f_photo6-p-500.jpg 500w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb0f_photo6-p-800.jpg 800w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb0f_photo6-p-1080.jpg 1080w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb0f_photo6.jpg 1600w" class="latest-post-image">
+              </div>
+            </a>
+            <div class="latest-post-content">
+              <a title="Finding Joy in Simplicity: Embracing a Minimalist Lifestyle" href="finding-joy-in-simplicity-embracing-a-minimalist-lifestyle.html" class="latest-post-link w-inline-block">
+                <h2 data-w-id="1be00ce7-be0c-c09c-9587-4d64518244bc" style="opacity:0" class="latest-post-item-title">Finding Joy in Simplicity: Embracing a Minimalist Lifestyle</h2>
+              </a>
+              <div data-w-id="ecdacb4f-c60b-f7c1-4e05-09a312ded674" style="opacity:0" class="latest-post-item-perex">Butcher tonx adaptogen, waistcoat eiusmod vaporware nostrud +1 cold-pressed snackwave gochujang. Locavore etsy echo park disrupt readymade est dolor hell of.</div>
+              <a title="Finding Joy in Simplicity: Embracing a Minimalist Lifestyle" data-w-id="3e72ecd8-0532-fe9f-88d4-e87079160dba" style="opacity:0" href="finding-joy-in-simplicity-embracing-a-minimalist-lifestyle.html" class="latest-post-more">Read More</a>
+            </div>
+          </div>
+          <div post-style="tall" role="listitem" class="latest-post w-dyn-item">
+            <a title="The Art of Decluttering: A Beginner's Guide" href="the-art-of-decluttering-a-beginners-guide.html" class="latest-post-link w-inline-block">
+              <div data-w-id="8d1cbd97-24f0-a19c-d90b-56ded9b40ff6" style="opacity:0" class="latest-post-image-wrap">
+                <img src="images/664f8a317157bd6f699fbafd-664f8a317157bd6f699fbb0e_photo3.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 84vw, (max-width: 767px) 80vw, 600px" srcset="https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb0e_photo3-p-500.jpg 500w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb0e_photo3-p-800.jpg 800w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb0e_photo3-p-1080.jpg 1080w, https://cdn.prod.website-files.com/664f8a317157bd6f699fbafd/664f8a317157bd6f699fbb0e_photo3.jpg 1181w" class="latest-post-image">
+              </div>
+            </a>
+            <div class="latest-post-content">
+              <a title="The Art of Decluttering: A Beginner's Guide" href="the-art-of-decluttering-a-beginners-guide.html" class="latest-post-link w-inline-block">
+                <h2 data-w-id="1be00ce7-be0c-c09c-9587-4d64518244bc" style="opacity:0" class="latest-post-item-title">The Art of Decluttering: A Beginner's Guide</h2>
+              </a>
+              <div data-w-id="ecdacb4f-c60b-f7c1-4e05-09a312ded674" style="opacity:0" class="latest-post-item-perex">Fugiat intelligentsia kinfolk officia. Dolore crucifix austin health goth gastropub. Chambray photo booth reprehenderit disrupt. Meditation butcher dolor, chillwave in celiac incididunt pinterest gatekeep venmo humblebrag thundercats polaroid.</div>
+              <a title="The Art of Decluttering: A Beginner's Guide" data-w-id="3e72ecd8-0532-fe9f-88d4-e87079160dba" style="opacity:0" href="the-art-of-decluttering-a-beginners-guide.html" class="latest-post-more">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="centered-button">
+        <a data-w-id="a67cb1b1-520a-0e6f-ce59-8b3110e9ef6d" style="opacity:0" href="blog.html" class="button mt-regular w-button">Dive Deeper</a>
+      </div>
+    </section>
+    <section data-w-id="9d483a44-5245-b2dd-18be-5eb66e5f6576" class="newsletter">
+      <div class="newsletter-inner">
+        <h3 class="heading-2">Subscribe to My Newsletter</h3>
+        <div class="form-block w-form">
+          <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form" data-wf-page-id="664f8a317157bd6f699fbaf7" data-wf-element-id="9d483a44-5245-b2dd-18be-5eb66e5f657b">
+            <label for="name-2" class="form-label">Name</label>
+            <input class="form-input w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="" type="text" id="name-2">
+            <label for="email-3" class="form-label">Email Address</label>
+            <input class="form-input w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="" type="email" id="email-2" required="">
+            <input type="submit" data-wait="Please wait..." class="button mt-medium w-button" value="Submit">
+          </form>
+          <div class="w-form-done">
+            <div>Thank you! Your submission has been received!</div>
+          </div>
+          <div class="w-form-fail">
+            <div>Oops! Something went wrong while submitting the form.</div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <div class="w-layout-blockcontainer container w-container">
         <div class="footer-bottom">
