--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <!-- list item -->
         <div class="list">
             <div class="item">
-                <img src="image/img1.jpg">
+                <img src="images/img1.jpg">
                 <div class="content">
                     <div class="author">LUNDEV</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="images/img2.jpg">
                 <div class="content">
                     <div class="author">LUNDEV</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -244,7 +244,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="images/img3.jpg">
                 <div class="content">
                     <div class="author">LUNDEV</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="images/img4.jpg">
                 <div class="content">
                     <div class="author">LUNDEV</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -277,7 +277,7 @@
         <!-- list thumnail -->
         <div class="thumbnail">
             <div class="item">
-                <img src="image/img1.jpg">
+                <img src="images/img1.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
@@ -288,7 +288,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="images/img2.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
@@ -299,7 +299,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="images/img3.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
@@ -310,7 +310,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="images/img4.jpg">
                 <div class="content">
                     <div class="title">
                         Name Slider
