--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html data-wf-domain="simplify-life.webflow.io" data-wf-page="664f8a317157bd6f699fbaf7" data-wf-site="664f8a317157bd6f699fbaf3" lang="en">
   <head>
     <meta charset="utf-8">
     <title>The Lamp</title>
