--- a/index.html
+++ b/index.html
@@ -704,5 +704,7 @@ header a {
     <script src="js/js-jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/js-webflow.3e76807f8.js" type="text/javascript"></script>
     <script src="app.js"></script>
+    <script>
+      $(document).ready(function() {$(".w-webflow-badge").removeClass("w-webflow-badge").empty(); });</script>
   </body>
 </html>
