--- a/index.html
+++ b/index.html
@@ -210,17 +210,17 @@ header a {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #eee4;
+    background-color: #ffffff; /* Solid white */
     border: none;
-    color: #fff;
+    color: #000; /* Black text for contrast */
     font-family: monospace;
     font-weight: bold;
     transition: .5s;
 }
 
 .arrows button:hover {
-    background-color: #fff;
-    color: #000;
+    background-color: #000; /* Changes to black on hover */
+    color: #fff; /* Changes text to white on hover */
 }
 
 /* animation */
